# picoflow

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  CROSS_COMPILATION_SETUP.md  Cargo.toml  Dockerfile.build  IMPLEMENTATION_PLAN.md  PRD.md  QUICK_START_CROSS_COMPILE.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES_SUMMARY.md  claude.md  clippy.toml  deny.toml  docker-build-entrypoint.sh  rustfmt.toml  test_release.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  cross-compile-test.yml  release.yml
benches/: dag_benchmark.rs  memory_benchmark.rs  state_benchmark.rs  task_benchmark.rs  workflow_benchmark.rs
docs/: SECURITY_CHECKLIST.md  api-reference.md  benchmarks.md  cross-compilation.md  faq.md  troubleshooting.md  user-guide.md
docs/demos/: 01-quickstart.tape  02-run.tape  03-inspect.tape  README.md  pipeline.yaml  render.sh
examples/: http_workflow.yaml  parallel.yaml  parallel_10.yaml  scheduled_workflow.yaml  test_cron.yaml
examples/workflows/: README.md  backup-comprehensive.yaml  backup.yaml  data-pipeline.yaml  deployment.yaml  health-check.yaml  parallel.yaml  simple.yaml
homebrew-picoflow/: README.md
homebrew-picoflow/Formula/: picoflow.rb
scripts/: README.md  build-all.sh  build-release.sh  docker-build.sh  e2e-test.sh  package-release.sh  run-benchmarks.sh  smoke-test.sh
src/: cli.rs  cron_scheduler.rs  daemon.rs  dag.rs  error.rs  lib.rs  logging.rs  main.rs  metrics.rs  models.rs  parser.rs  retry.rs  scheduler.rs  state.rs  templates.rs
src/executors/: http.rs  mod.rs  shell.rs  ssh.rs
tests/: http_executor_integration.rs  workflow_integration.rs
